package jp.geng.kadoshima;

public class Main {

	public static void main(String[] args) {
		// TODO 自動生成されたメソッド・スタブ
		Game game=new Game();
		game.start();
	}

}
